Edge:
* [FEATURE] Ruby 2.0 support.
* [FEATURE] Rails 4.0.0 beta1 support.
* [FIX] :utf8? option within index definitions is now supported, and defaults to true if the database configuration's encoding is set to 'utf8'.
* [FIX] indices_location and configuration_file values in thinking_sphinx.yml will be applied to the configuration.
* [CHANGE] Strings and regular expressions in ThinkingSphinx::Search::Query are now treated as UTF-8.
* [FIX] Primary keys that are not 'id' now work correctly.
* [CHANGE] Setting a custom framework will rebuild the core configuration around its provided settings (path and environment).
* [CHANGE] Search masks don't rely on respond_to?, and so Object/Kernel methods are passed through to the underlying array instead.
* [FIX] Search options specified in index definitions and thinking_sphinx.yml are now used in search requests (eg: max_matches, field_weights).
* [FEATURE] Indexes defined in app/indices in engines are now loaded (Antonio Tapiador del Dujo).
* [FIX] Custom association conditions are no longer presumed to be an array.
* [CHANGE] Empty search conditions are now ignored, instead of being appended with no value (Nicholas Klick).
* [CHANGE] Custom conditions are no longer added to the sql_query_range value, as they may involve associations.
* [FIX] Capistrano tasks use the correct ts rake task prefix (David Celis).
* [FEATURE] Query errors are classified as such, instead of getting the base SphinxError.

2013-02-04: 3.0.1
* [FEATURE] Provide Capistrano deployment tasks (David Celis).
* [FEATURE] Allow specifying of Sphinx version. Is only useful for Flying Sphinx purposes at this point - has no impact on Riddle or Sphinx.
* [FEATURE] Support new JDBC configuration style (when JDBC can be used) (Kyle Stevens).
* [FIX] Referring to associations via polymorphic associations in an index definition now works.